fix(CompanyDetail): remove z-index

--- a/src/components/CompanyDetail.css
+++ b/src/components/CompanyDetail.css
@@ -8,7 +8,6 @@
   align-items: center;
   row-gap: 24px;
   position: relative;
-  z-index: 1;
 }
 
 .company__detail--logo {
